--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{
-  margin: 0 auto;
+  font-family: 'Times New Roman', Times, serif;
 }
 button{
   padding: 10px;
@@ -8,4 +8,6 @@ button{
 }
 .result{
   font-size: 3rem;
+  margin: 0 auto;
+  font-weight: 700;
 }
