--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,13 @@
 body{
   font-family: 'Times New Roman', Times, serif;
 }
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 50px 0;
+}
 button{
   padding: 10px;
   font-size: 2rem;
@@ -10,4 +17,7 @@ button{
   font-size: 3rem;
   margin: 0 auto;
   font-weight: 700;
+  border: 3px solid black;
+  min-height: 200px;
+  text-align: center;
 }
