--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,9 @@ button{
   font-size: 3rem;
   margin: 0 auto;
   font-weight: 700;
-  border: 3px solid black;
+  border: 3px solid blue;
+  max-width: 800px;
   min-height: 200px;
   text-align: center;
+  line-height: 80px;
 }
