--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,29 @@
 body{
   font-family: 'Times New Roman', Times, serif;
 }
+
+.main-container>div {
+  border: 2px solid;
+  padding: 20px 50px;
+}
+.main-container{
+  display: flex;
+  padding: 50px 20px;
+  gap: 10px;
+  justify-content: space-around;
+  border: 2px solid
+}
+.game-contoller-btns{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
 .container{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin: 50px 0;
 }
 button{
   padding: 10px;
