--- a/css/index.css
+++ b/css/index.css
@@ -31,12 +31,14 @@ button{
   border-radius: 10px;
 }
 .result{
-  font-size: 3rem;
-  margin: 0 auto;
+  font-size: 2.5rem;
   font-weight: 700;
   border: 3px solid blue;
+  width: 600px;
+  height: 300px;
   max-width: 800px;
   min-height: 200px;
   text-align: center;
   line-height: 80px;
+  padding: 30px;
 }
