--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,23 @@ body{
   border: 2px solid;
   padding: 20px 50px;
 }
-.main-container{
+.main-container {
+  display: flex;
+  flex-direction: column;
+}
+.game-introduction{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+}
+.game-introduction > p{
+  font-size: 1.5rem;
+  margin: 10px;
+  font-weight: 600;
+  color: blue;
+}
+.game-body{
   display: flex;
   padding: 50px 20px;
   gap: 10px;
@@ -16,6 +32,7 @@ body{
 .game-contoller-btns{
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 30px;
 }
