--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,6 @@ body{
 }
 
 .main-container>div {
-  border: 2px solid;
   padding: 20px 50px;
 }
 .main-container {
@@ -15,19 +14,22 @@ body{
   flex-direction: column;
   align-items: center;
   font-size: 1.5rem;
+  margin-bottom: 50px;
 }
 .game-introduction > p{
   font-size: 1.5rem;
-  margin: 10px;
+  margin: 5px;
   font-weight: 600;
   color: blue;
+}
+.game-introduction > h1{
+  margin-bottom: 10px;
 }
 .game-body{
   display: flex;
   padding: 50px 20px;
   gap: 10px;
   justify-content: space-around;
-  border: 2px solid
 }
 .game-contoller-btns{
   display: flex;
@@ -42,10 +44,22 @@ body{
   align-items: center;
   gap: 20px;
 }
+
+.container > div:nth-child(1){
+  display: flex;
+  gap: 20px;
+}
 button{
   padding: 10px;
   font-size: 2rem;
+  border: 2px solid black;
   border-radius: 10px;
+  cursor: pointer;
+  background-color: #bbf0bb;
+}
+button:active{
+  background-color: #f6f699;
+  padding: 8px;
 }
 .result{
   font-size: 2.5rem;
