--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,10 @@
+*{
+  box-sizing: border-box;
+}
 body{
   font-family: 'Times New Roman', Times, serif;
+  background-color: rgb(223, 223, 223);
+  margin: 0;
 }
 
 .main-container>div {
@@ -66,9 +71,8 @@ button:active{
   font-weight: 700;
   border: 3px solid blue;
   width: 600px;
-  height: 300px;
   max-width: 800px;
-  min-height: 200px;
+  height: 400px;
   text-align: center;
   line-height: 80px;
   padding: 30px;
